--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.10",
+    "express": "^4.18.1",
     "puppeteer": "^13.7.0"
   }
 }
