--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Sukhmanjit Singh <singh.sukhmanjit@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "puppeteer": "^13.7.0"
   }
