--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "puppeteer": "^13.7.0"
+    "node-cron": "^3.0.0",
+    "puppeteer": "^13.7.0",
+    "shelljs": "^0.8.5"
   }
 }
